--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea
-package.json
 package-lock.json
 node_modules
 bower_components
+client_id.json
