--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@angular/material": "^2.0.0-beta.11",
+    "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
+    "angular-aria": "^1.6.6",
+    "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.6",
+    "angular-route": "^1.6.6",
+    "angular-sanitize": "^1.6.6",
     "express": "^4.16.1",
     "google-calendar": "^1.3.2",
     "node": "^8.3.0",
