--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "angular-aria": "^1.6.6",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
+    "angular-moment-picker": "^0.10.1",
     "angular-route": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "express": "^4.16.1",
     "google-calendar": "^1.3.2",
+    "moment": "^2.19.1",
     "node": "^8.3.0",
     "nodemon": "^1.12.1"
   },
