--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-route": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "express": "^4.16.1",
+    "fs": "0.0.1-security",
     "google-calendar": "^1.3.2",
     "moment": "^2.19.1",
     "node": "^8.3.0",
